<resources>
    <string name="app_name">myToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


        <string name="todolist">ToDoList</string>
        <string name="work1">Work</string>
        <string name="bake_a_cake">Bake a Cake</string>
        <string name="play_a_game">Play a Game</string>
        <string name="read_a_book">Read a Book</string>
        <string name="add_new_task">Add New Task +</string>
        <string name="write_a_task">Write a Task</string>
        <string name="work">Work</string>
        <string name="due_date">Due Date</string>
        <string name="tomorrow">Tomorrow</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">title</string>
    <string name="details">details</string>
    <string name="inserted_date">inserted date</string>
    <string name="is_completed">is completed</string>
    <string name="edit_date">Edit Date</string>

</resources>
