<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".fragments.TaskFragment"
    android:background="@color/pag">


    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/etDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details"
        android:padding="10dp"/>

    <ImageButton
        android:id="@+id/btnCalender"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#E4FFFFFF"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:tint="@color/purple_500" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/inserted_date"/>

    <CheckBox
        android:id="@+id/cbComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_completed"
        android:textColor="@color/Blue_Gray_Light"/>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

